<resources>
    <string name="app_name">Hikiefy</string>
    <string name="email_address">Email address</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Loging</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pickup_location">Pick-up Location</string>
    <string name="destination">Destination</string>
    <string name="search">Search</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="empty_string" />
    <string name="please_enter_password">Enter password</string>
    <string name="enter_password">Enter password</string>
    <string name="apply_image">Apply image</string>
    <string name="first_name">First Name</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select gender</string>
    <string name="warning_type">Warning Type</string>
    <string name="list_image">list image</string>
    <string name="alternative_cellphone_number">Alternative Cellphone Number</string>
    <string name="next_of_kin_cellphone_number">Next of kin Cellphone Number</string>
    <string name="edit">edit</string>
    <string name="pickupspot">Pickup Spot</string>
    <string name="save">Save</string>
    <string name="please_enter_name">Enter name</string>
    <string name="please_enter_last_name">Enter last name</string>
    <string name="please_enter_identity_number">Enter Identity Number</string>
    <string name="please_enter_phone_number">Enter phone number</string>
    <string name="enter_all_fields">Enter all fields!</string>
    <string name="register_profile">Register Profile</string>
    <string name="password_too_simple">Password too simple!</string>
    <string name="incorrect_email_format">Email is not correctly formatted!</string>
    <string name="confirmation_unmatched">Password and confirm password do not match!</string>
    <string name="incorrect_phone_format">\" is not a correctly formatted phone number!\"</string>
    <string name="invalid_id">\" is not a valid SA ID!\"</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="select_appointment_type">Select appointment type</string>
    <string name="enter_minimum_qualification">Enter minimum qualification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite">favorite</string>
    <string name="check">check</string>
    <string name="enter_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="identity_number">Identity Number</string>
    <string name="county_name">Country</string>
    <string name="city_name">City</string>
    <string name="province_name">Province</string>
    <string name="house_number">House Number</string>
    <string name="street_name">Street Name</string>
    <string name="postal_code">Postal Code</string>
    <string name="API_KEY">AIzaSyAZGdutXujRVrXeeV8zH-TJWfQh7tpvUyw</string>

</resources>