<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lytHome"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPickUp"
            style="@style/text_input_layout"
            android:hint="@string/pickup_location"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/pickup_location"
            app:startIconDrawable="@drawable/my_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPickUp"
                style="@style/name_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytDestination"
            style="@style/text_input_layout"
            android:hint="@string/destination"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/destination"
            app:startIconDrawable="@drawable/location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDestination"
                style="@style/name_edit_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            style="@style/button"
            android:layout_marginBottom="20dp"
            android:background="@drawable/buttons"
            android:onClick="Search"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>